--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,9 @@ executors:
           POSTGRES_USER: root
           POSTGRES_DB: circle_test
           POSTGRES_PASSWORD: ""
-    working_directory: ~/project/test-workspace
   backend_build:
     docker:
       - image: eu.gcr.io/moocfi-public/cloud-sdk-node:latest 
-    working_directory: ~/project/build-workspace
 
 jobs:
   code_style:
@@ -181,17 +179,17 @@ jobs:
       - run:
           name: "Run tests"
           environment:
-            JEST_JUNIT_OUTPUT_DIR: ./coverage/junit/
+            JEST_JUNIT_OUTPUT_DIR: ~/project/test-workspace/backend/coverage/junit/
           command: |
             TEST=$(circleci tests glob ./**/*.test.ts | grep -v node_modules | circleci tests split --split-by=timings)
             echo $TEST
             npm run test:ci -- --runTestsByPath $TEST
       - store_test_results:
-          path: ./coverage/junit/
+          path: ~/project/test-workspace/backend/coverage/junit/
       - store_artifacts:
-          path: ./coverage/junit/
+          path: ~/project/test-workspace/backend/coverage/junit/
       - store_artifacts:
-          path: ./coverage/jest
+          path: ~/project/test-workspace/backend/coverage/jest
           destination: backend-tests
       - persist_to_workspace:
           root: ~/project/test-workspace/backend
@@ -217,6 +215,7 @@ jobs:
     executor: backend_build
     #docker:
     #  - image: eu.gcr.io/moocfi-public/cloud-sdk-node:latest
+    working_directory: ~/project/build-workspace
     steps:
       - checkout
       - setup_remote_docker:
