test codecov orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs:
   docker: circleci/docker@1.7.0
   jq: circleci/jq@2.2.0
   node: circleci/node@5.0.0
+  codecov: codecov/codecov@3.2.2
 executors:
   backend_test: 
     docker:
@@ -130,9 +131,10 @@ jobs:
           root: ~/project/backend
           paths:
             - coverage
+      - codecov/upload
       # - run:
       #     name: "Upload coverage"
-      #     command: "cd ~/project/backend && bash <(curl -s https://codecov.io/bash)"
+      #     command: bash <(curl -s https://codecov.io/bash)"
 
   upload_backend_coverage:
     executor: backend_test
