--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,7 +132,7 @@ jobs:
             - coverage
       - run:
           name: "Upload coverage"
-          command: bash <(curl -s https://codecov.io/bash)"
+          command: bash <(curl -s https://codecov.io/bash)
 
   upload_backend_coverage:
     executor: backend_test
